--- a/docs/licence.mdx
+++ b/docs/licence.mdx
@@ -9,7 +9,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## Writing & Graphics
 
-All writing, graphics and other content on the site is my original content, and I license it under Creative Commons Attribution-NonCommercial 4.0 International [CC BY-NC 4.0](http://creativecommons.org/licenses/by-nc/4.0/). If you are looking at the repository, almost everything in the [docs](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs) and [pages](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/src/pages) is CC BY-NC 4.0 and available for re-use with attribution:
+All writing, graphics and other content on the site is my original content (unless stated otherwise), and I license it under Creative Commons Attribution-NonCommercial 4.0 International [CC BY-NC 4.0](http://creativecommons.org/licenses/by-nc/4.0/). If you are looking at the repository, almost everything in the [docs](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs) and [pages](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/src/pages) is CC BY-NC 4.0 and available for re-use with attribution:
 
 
 > "Title" ― [Mateusz Dąbrowski](https://mateuszdabrowski.pl/") ― [CC BY-NC 4.0](ttp://creativecommons.org/licenses/by-nc/4.0/)
@@ -22,11 +22,11 @@ All writing, graphics and other content on the site is my original content, and 
 
 ## Code & Design
 
-Site design and its source code are written by me under the [MIT license](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs/LICENSE) and are openly available for re-use on [GitHub](https://github.com/MateuszDabrowski/mateuszdabrowski.pl)
+Site design and its source code are adapted by me and available under the [MIT license](https://github.com/MateuszDabrowski/mateuszdabrowski.pl/tree/master/docs/LICENSE) and are openly available for re-use on [GitHub](https://github.com/MateuszDabrowski/mateuszdabrowski.pl)
 
 
 ## Attribution
 
 - Logo is done by [Marek Jagusiak](https://jagusiak.eu)
-- Images on main page are from [Undraw](https://undraw.co)
+- Three graphics on main page are from [Undraw](https://undraw.co)
 - Website is built with [Docusaurus 2](https://v2.docusaurus.io)
