--- a/docs/privacy.mdx
+++ b/docs/privacy.mdx
@@ -9,7 +9,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 ## TL;DR
 
-I do not collect your personal data and do not share any information with any third parties except for non-personally identifiable, aggregated data used by [Google Analytics Solutions](https://www.google.com/analytics/) and [Cloudflare](https://www.cloudflare.com/).
+I do not collect your personal data and do not share any information with third parties except for non-personally identifiable, aggregated data used by [Google Analytics Solutions](https://www.google.com/analytics/) and [Cloudflare](https://www.cloudflare.com/).
 
 ## Cookies
 
