Small fix to return logic in countdown component plus comments for easier reading

--- a/docs/engage-with-countdown.mdx
+++ b/docs/engage-with-countdown.mdx
@@ -33,7 +33,7 @@ For example, did you know there is only <Countdown input='July 20, 2024, 20:17:4
 
 ```html Sample countdown code for above line
 <p id="counter1">
-    For example, did you know there is only <span class="days"></span> days <span class="hours"></span> hours <span class="minutes"></span> minutes and <span class="seconds"></span> seconds left till 50th anniversary of the first moonlanding?
+    For example, did you know there is only <span class="days"></span> days, <span class="hours"></span> hours, <span class="minutes"></span> minutes and <span class="seconds"></span> seconds left till 50th anniversary of the first moonlanding?
 </p>
 
 <script>
