Small content fixes

--- a/docs/engage-with-countdown.mdx
+++ b/docs/engage-with-countdown.mdx
@@ -109,7 +109,7 @@ Time for the important part - the one you will always edit. The counter's deadli
 const deadline = new Date("2077-07-20T20:17:00+00:00").getTime()
 ```
 
-To use it, insert date in a *YYYY-MM-DD***T***hh:mm:ss***+***hh:mm* format. The **T** is just a delimiter between date and time, **+***hh:mm*, on the other hand, allows you to add time variable (for example summertime change).
+To use it, insert date in a YYYY-MM-DD**T**hh:mm:ss **+**hh:mm format. The **T** is just a delimiter between date and time, **+**hh:mm, on the other hand, allows you to add time variable (for example summertime change).
 
 However, depending on the needs, you may want to use other available formats, for example, simplified only-date format perfect when you need to count days.
 
