--- a/docs/pages/toolset.mdx
+++ b/docs/pages/toolset.mdx
@@ -1,6 +1,73 @@
 ---
 id: toolset
 title: Toolset
-sidebar_label: Toolset
 ---
 
+import { LeadText } from '../../src/components/LeadText.js';
+
+<LeadText content="Show me your tools, and I will tell you who you are. Or so they say." />
+
+## Software
+
+### Operating System
+
+Mac and Windows (sorry Ubuntu, this wasn't working for me anymore).
+
+### Browser
+
+Safari for non-development, [Firefox Developer Edition](https://www.mozilla.org/en-US/firefox/developer/) and [Chrome](https://www.google.com/chrome/) for anything code related.
+
+### Text Editor
+
+For all my development on both Mac and Windows, I'm using Microsoft's [Visual Studio Code](https://code.visualstudio.com/). I tested about a dozen various editors, and this one feels like the most polished and universal solutions for Marketing Automation Developers. It's blazing fast, powerful and extendable — great out-of-the-box, awesome once you configured for your own needs. I'm using it not only for standard coding (HTML, CSS, JavaScript, SSJS, AMPScript, MJML) but also for writing Markdown, working with JSON, manipulating CSV files and RegExing. As for now, I'm using other solutions only for SQL and Jupyter Notebooks.
+
+A lot of VSCode's powers comes from a fantastic extension repository, and some require a sincere recommendation (in alphabetical order):
+
+- [Bracket Pair Colorizer 2](https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer-2): Changes the colour of the matching brackets to differentiate nested elements. The only way to stay sane in JavaScript jungle.
+- [Color Highlight](https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight): Simple tools that add appropriate background to any colour code. Excellent for anything front-end.
+- [ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint): If you write JavaScript, you use ESLint. Period.
+- [Image Preview](https://marketplace.visualstudio.com/items?itemName=kisstkondoros.vscode-gutter-preview): Another handy and straightforward solution. It shows miniatures of the image next to the import in the code.
+- [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer): There are many tools to see hot reloading version of the page you are coding. This one is the simplest.
+- [Material Theme](https://marketplace.visualstudio.com/items?itemName=Equinusocio.vsc-material-theme): It's a beautiful looking theme.
+- [MJML](https://marketplace.visualstudio.com/items?itemName=mjmlio.vscode-mjml) and [mjml-syntax](https://marketplace.visualstudio.com/items?itemName=digitalstreamio.mjml-syntax): Must have extensions if you want to write mobile-first emails with MJML in VSCode.
+- [Path Intellisense](https://marketplace.visualstudio.com/items?itemName=christian-kohler.path-intellisense): Autocompletes paths. Yay!
+- [Python](https://marketplace.visualstudio.com/items?itemName=ms-python.python): If you write Python, you use Python.
+- [Rainbow CSV](https://marketplace.visualstudio.com/items?itemName=mechatroner.rainbow-csv): Shows columns in pure CSV. Happy magic.
+- [TabNine](https://marketplace.visualstudio.com/items?itemName=TabNine.tabnine-vscode): If you ever dreamt about the code that writes itself, this is the extension you want. Creepy. Awesome. But creepy. Must have.
+- [Todo Tree](https://marketplace.visualstudio.com/items?itemName=Gruntfuggly.todo-tree): The best way to work with TODO logging in code.
+- [vscode-icons](https://marketplace.visualstudio.com/items?itemName=vscode-icons-team.vscode-icons): Those are nice looking icons.
+
+Finally, it is not an extension, but a must-have for me: [Fira Code](https://github.com/tonsky/FiraCode) font. Check it out. You will love it.
+
+If you are interested in my configuration, you can find dotfiles on the [Github Repository](https://github.com/MateuszDabrowski/dotfiles/tree/master/vscode).
+
+### Terminal
+
+90% of the time I'm using the terminal integrated into VSCode. 10% of the time it is [iTerm](https://www.iterm2.com) (on Mac) or Powershell (on Windows).
+
+Windows setup with Powershell both as standalone and in the VSCode is quite out-of-the-box with just some [useful aliases](https://github.com/MateuszDabrowski/dotfiles/blob/master/terminal/powershell-profile.txt).
+
+My Mac is a bit more customized. For starters, instead of bash, I'm using [zsh](http://zsh.sourceforge.net) with [oh-my-zsh](https://ohmyz.sh) and [Homebrew](https://brew.sh). I also have a lot of aliases to speed up my work (you can check them in [Github Repo](https://github.com/MateuszDabrowski/dotfiles/blob/master/terminal/.zshrc)).
+
+On both systems, I leverage [Node.js](https://nodejs.org/en/) for JavaScript related coding and [Miniconda](https://docs.conda.io/en/latest/miniconda.html) to stay sane in the [jungle full of Pythons](https://xkcd.com/1987/).
+
+### API Client
+
+[Insomnia Core](https://insomnia.rest/). It is simple, and it works.
+
+### Design
+
+I'm not a graphic designer. I need something that is simple, fast and can output images for emails, landing pages and presentations. With such needs, there is nothing better than [Sketch](https://www.sketch.com/).
+
+I also have an [Affinity Designer](https://affinity.serif.com/en-gb/) but needed it only twice in the last few years.
+
+### Productivity
+
+Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all Mac only):
+
+1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time.
+2. [Numi](https://numi.app/) is the best calculator app you can have. By far.
+3. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
+4. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
+5. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
+6. For tasks and notes, after testing multiple options, I stuck with Apple's Notes and Reminders.
