--- a/docs/pages/toolset.mdx
+++ b/docs/pages/toolset.mdx
@@ -19,9 +19,9 @@ Safari for non-development, [Firefox Developer Edition](https://www.mozilla.org/
 
 ### Text Editor
 
-For all my development on both Mac and Windows, I'm using Microsoft's [Visual Studio Code](https://code.visualstudio.com/). I tested about a dozen various editors, and this one feels like the most polished and universal solutions for Marketing Automation Developers. It's blazing fast, powerful and extendable — great out-of-the-box, awesome once you configured for your own needs. I'm using it not only for standard coding (HTML, CSS, JavaScript, SSJS, AMPScript, MJML) but also for writing Markdown, working with JSON, manipulating CSV files and RegExing. As for now, I'm using other solutions only for SQL and Jupyter Notebooks.
+For all my development on both Mac and Windows, I'm using Microsoft [Visual Studio Code](https://code.visualstudio.com/). I tested about a dozen various editors, and this one feels like the most polished and universal solutions for Marketing Automation Developers. It's blazing fast, powerful and extendable — great out-of-the-box, awesome once you configured for your own needs. I'm using it not only for standard coding (HTML, CSS, JavaScript, SSJS, AMPScript, MJML) but also for writing Markdown, working with JSON, manipulating CSV files and RegExing. As for now, I'm using other solutions only for SQL and Jupyter Notebooks.
 
-A lot of VSCode's powers comes from a fantastic extension repository, and some require a sincere recommendation (in alphabetical order):
+A lot of VSCode powers comes from a fantastic extension repository, and some require a sincere recommendation (in alphabetical order):
 
 - [Bracket Pair Colorizer 2](https://marketplace.visualstudio.com/items?itemName=CoenraadS.bracket-pair-colorizer-2): Changes the colour of the matching brackets to differentiate nested elements. The only way to stay sane in JavaScript jungle.
 - [Color Highlight](https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight): Simple tools that add appropriate background to any colour code. Excellent for anything front-end.
@@ -59,15 +59,13 @@ On both systems, I leverage [Node.js](https://nodejs.org/en/) for JavaScript rel
 
 I'm not a graphic designer. I need something that is simple, fast and can output images for emails, landing pages and presentations. With such needs, there is nothing better than [Sketch](https://www.sketch.com/).
 
-I also have an [Affinity Designer](https://affinity.serif.com/en-gb/) but needed it only twice in the last few years.
-
 ### Productivity
 
 Apart from the above main areas, I also love some smaller apps that make my life better (unfortunately, all Mac only):
 
 1. [Alfred](https://www.alfredapp.com/) is one of the best ways to keep your hands on the keyboard all the time.
-2. [Numi](https://numi.app/) is the best calculator app you can have. By far.
+2. [Numi](https://numi.app/) - the best calculator app you can have. By far.
 3. [Better Touch Tool](https://folivora.ai/) not only allows you to leverage gestures to their fullest but also takes care of windows snapping to the edges.
 4. [Mailplane](https://mailplaneapp.com/) - if you use Gmail and have a Mac, this app is a must.
 5. [PDF Expert](https://pdfexpert.com/) is the best PDF app you can have.
-6. For tasks and notes, after testing multiple options, I stuck with Apple's Notes and Reminders.
+6. For tasks and notes, after testing multiple options, I stuck with Apple Notes and Reminders.
