Docusaurus version bymo to alpha 58 + yet another file structure update

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -1,15 +1,15 @@
 ---
-id: snippets
-title: Snippets
+id: docs-and-snippets
+title: Docs & Snippets
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../src/components/LeadText.js';
 
-<LeadText content="SSJS documentation and JS code snippets that I find useful for developing Marketing Automation." />
+<LeadText content="SSJS + JS documentation and code snippets that I find useful for developing Marketing Automation." />
 
-## SSJS
+## Server-Side JavaScript
 
-SSJS (Server-Side JavaScript) is an XX-century-version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
+SSJS is an XX-century-version of JavaScript paired with proprietary libraries created by Salesforce. It is one of the programmatic tools useful to leverage Marketing Cloud to its fullest potential. I am creating this documentation to make my (and hopefully also yours) work easier.
 
 ## JavaScript
 
