--- a/docs/ideas.mdx
+++ b/docs/ideas.mdx
@@ -3,7 +3,7 @@ id: ideas
 title: Ideas
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="Step-by-step implementation guides on various Marketing Automation ideas." />
 
