--- a/docs/licence.mdx
+++ b/docs/licence.mdx
@@ -3,7 +3,7 @@ id: licence
 title: License & Attribution
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="Let's talk copyrights in a human-readable way." />
 
