--- a/docs/privacy.mdx
+++ b/docs/privacy.mdx
@@ -3,7 +3,7 @@ id: privacy
 title: Privacy
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="Legal stuff. Short and simple." />
 
