--- a/docs/ssjs/data-extensions.mdx
+++ b/docs/ssjs/data-extensions.mdx
@@ -3,6 +3,6 @@ id: data-extensions
 title: Data Extensions
 ---
 
-import { LeadText } from '../../../src/components/LeadText.js';
+import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="About" />
