--- a/docs/toolset.mdx
+++ b/docs/toolset.mdx
@@ -3,7 +3,7 @@ id: toolset
 title: Toolset
 ---
 
-import { LeadText } from '../../src/components/LeadText.js';
+import { LeadText } from '../src/components/LeadText.js';
 
 <LeadText content="Show me your tools, and I will tell you who you are. Or so they say." />
 
