--- a/docs/ssjs/error-handling.mdx
+++ b/docs/ssjs/error-handling.mdx
@@ -5,5 +5,83 @@ title: Error Handling
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Hello World' />
+<LeadText content='To catch, or not to catch, that is debugging.' />
 
+When you start working with programmatic languages in Salesforce Marketing Cloud, you will quickly become close friends with Error 500 page. And if you beat it and go a bit deeper into the code and official documentation, you will also fall in love with unexpected errors in function and API responses. How to survive those?
+
+## SSJS Testing Ground
+
+Let's talk where to write the SSJS. The language is useful in many places within the Marketing Cloud ecosystem, among else:
+
+- Cloud Pages (Web Studio)
+- Code Resources (Web Studio)
+- Content Blocks (Content Builder)
+- Emails and other communication (Email Studio / Content Builder)
+- Script Activities (Automation Studio)
+
+In all of the above cases, you might write more complex logic that will be error-prone and in need of debugging. However, only a few of those are good to test your code, as only some of them will allow you to leverage the methods mentioned later in the article.
+
+### Cloud Page
+
+The most popular recommendation is Cloud Page - write or paste the SSJS code there, publish and check whether it is working correctly. It is a great way, as it allows you to easily leverage SSJS for backend and HTML/CSS/JavaScript for frontend.
+
+It has, however, two flaws that, in some scenarios, might guide you to a different solution.
+
+1. **Cost**. Each view of the Cloud Page cost one Super Message. During debugging, you might hit quite a lot of those. And those tests across your team and over time stack up.
+2. **Speed and context**. Each time you want to republish updated Cloud Page you have to go through the Preview windows that load the whole code in POST method context, confirm it and go to the page via URL to see GET method context.
+
+### JSON Code Resource
+
+When I want to go around those issues, I go with JSON Code Resource (also available in Web Studio). It generates a link you can use to check whether everything works just as a Cloud Page. However, page views are free. There is also no preview allowing for faster save-reload.
+
+The cons? You won't be able to use any frontend (neither HTML nor JavaScript), which might be a deal-breaker in some scripts that you want to test.
+
+### So where?
+
+If you need | Cloud Page | JSON Code Resource
+-- | -- | --
+SSJS | ✅ | ✅
+HTML/CSS/JS | ✅ | ❌
+No Cost |  ❌ | ✅
+Quick Save | ❌ | ✅
+
+## 500 Error
+
+The first type of error you might encounter is the dreaded 500 Error that you see right after *trying* to run your code. Reason? The code backend (SSJS/AMPScript) is invalid. There might be a few reasons for this. The most popular are:
+
+1. Typo in SSJS Function Name
+2. Unclosed or wrongly closed Bracket
+3. Use of JavaScript feature that is not available in SSJS (and there is quite a lot of those...)
+4. Lack of declaration (in most cases either missing `Platform.Load("Core","1");` or `var soap = new Script.Util.WSProxy();` while using related functions)
+
+How to deal with those issues? Apart from just reading through your code line by line, there are two faster solutions.
+
+### Divide and Conquer
+
+The first one can be done directly in the Marketing Cloud but is a bit of a brute-force approach. You comment out half of your code with `/* here goes the code */` and check again. If it works, you have half of the SSJS validated (from the 500 error perspective). If not, you split the remaining code in half and comment it out. This way, you can quite quickly find the few lines that are leading to the issue and focus only on them.
+
+### SSJS Linting
+
+For many of the reasons leading to 500 error, there is an even faster solution, but with some pre-requisites:
+
+1. You need to have [Visual Studio Code](https://code.visualstudio.com/) with [ESLint extension](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint) installed.
+2. You need to have [NodeJS](https://nodejs.org/en/) installed.
+3. You need to have a folder where you will store your SSJS code in files with `.ssjs` file extension.
+4. You need to install the excellent [ESLing configuration for SSJS](https://github.com/JoernBerkefeld/eslint-config-ssjs) made by [Joern Berkefeld](https://www.linkedin.com/in/joernberkefeld/). To do this, run in terminal `npx i -D eslint eslint-config-ssjs` for the SSJS folder.
+
+Voila, automatic validation for the correctness of your SSJS code (again, only from the perspective of 500 error - still worth it).
+
+## Write the Error down
+
+### Debugging Variable
+
+## Try to Catch the Error
+
+## Error Logging
+
+## Error Handler Function
+
+## Sum Up
+
+---
+To learn about debugging **AMPScript**, check out [guide by Zuzanna Jarczyńska](https://sfmarketing.cloud/2019/08/09/debugging-ampscript/).
