Small fix in engage-with-countdown and draft of tailor-with-data

--- a/docs/ideas/engage-with-countdown.mdx
+++ b/docs/ideas/engage-with-countdown.mdx
@@ -14,7 +14,7 @@ import { Countdown } from '../../src/components/Countdown.js';
 
 1. [Learn how to implement the solution](#final-countdown)
 2. [Adapt it to the story you are telling](#counting-options)
-3. [ShareLeverage dynamic content for even better results](#take-advantage-of-dynamic-content)
+3. [Leverage personalization for even better results](#take-advantage-of-dynamic-content)
 
 Lured visitors to your landing page? Great! Now it is time to convert them to your cause. Whitepaper download, product purchase or enrollment, doesn't matter. In each case, you will fight for the attention of the user and drive him towards the goal set for him. It's not easy in the modern web environment, but even the basics might give you the upper hand.
 
